Inclusão tag header e main

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    
+
     <link
       rel="icon"
       href="https://static.wixstatic.com/media/71a6c2_4a3161933af04f349c00bdcc1ceebc50%7Emv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/71a6c2_4a3161933af04f349c00bdcc1ceebc50%7Emv2.png"
@@ -19,107 +19,112 @@
     <title>Redragon Atv Aula 1</title>
   </head>
   <body>
-    <nav>
-      <ul class="navbar">
-        <li><a href="#">Gamers</a></li>
-        <li><a href="#">KeyBords</a></li>
-        <li><a href="#">Top HeadPhones</a></li>
-        <li><a href="#">Onde Comprar</a></li>
-        <li><a href="#">Contato</a></li>
-        <form action="search">
-          <input
-            type="search"
-            class="searchImput"
-            placeholder="o que você procura?"
+    <header>
+      <nav>
+        <ul class="navbar">
+          <li><a href="#">Gamers</a></li>
+          <li><a href="#">KeyBords</a></li>
+          <li><a href="#">Top HeadPhones</a></li>
+          <li><a href="#">Onde Comprar</a></li>
+          <li><a href="#">Contato</a></li>
+          <form action="search">
+            <input
+              type="search"
+              class="searchImput"
+              placeholder="o que você procura?"
+            />
+
+            <span id="box_icone_busca">
+              <i id="icone_busca" class="fa fa-search"></i>
+            </span>
+          </form>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <div>
+        <img
+          src="https://static.wixstatic.com/media/71a6c2_cfd6a00ce24a4201905ea28261e32543~mv2.png/v1/fill/w_1903,h_708,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/71a6c2_cfd6a00ce24a4201905ea28261e32543~mv2.png"
+          width="100%"
+        />
+      </div>
+      <br />
+      <h2>Produtos Mais Vendidos da Semana</h2>
+      <section class="produtos">
+        <div>
+          <img
+            src="https://static.wixstatic.com/media/71a6c2_367201e3ad5f40f69e60594043d10414~mv2.png/v1/fill/w_574,h_574,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/01.png"
+            alt="cadeiraGamer"
+            width="370"
           />
+          <h3>Cadeira Gamer</h3>
+        </div>
 
-          <span id="box_icone_busca">
-            <i id="icone_busca" class="fa fa-search"></i>
-          </span>
-        </form>
-      </ul>
-    </nav>
-    <div>
-      <img
-        src="https://static.wixstatic.com/media/71a6c2_cfd6a00ce24a4201905ea28261e32543~mv2.png/v1/fill/w_1903,h_708,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/71a6c2_cfd6a00ce24a4201905ea28261e32543~mv2.png"
-        width="100%"
-      />
-    </div>
-    <br />
-    <h2>Produtos Mais Vendidos da Semana</h2>
-    <section class="produtos">
-      <div>
-        <img
-          src="https://static.wixstatic.com/media/71a6c2_367201e3ad5f40f69e60594043d10414~mv2.png/v1/fill/w_574,h_574,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/01.png"
-          alt="cadeiraGamer"
-          width="370"
-        />
-        <h3>Cadeira Gamer</h3>
-      </div>
+        <div>
+          <img
+            src="https://static.wixstatic.com/media/71a6c2_ec0eaed85fd547e18e0afae51867dee1~mv2.png/v1/fill/w_624,h_404,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/K582-IF-3%20%2B%2B%C2%A6%C2%A6_jpg.png"
+            alt="tecladoGamer"
+            width="370"
+            height="370"
+          />
+          <h3>Teclado Gamer</h3>
+        </div>
+        <div>
+          <img
+            src="https://static.wixstatic.com/media/71a6c2_77e6653e9cd747dea8f00136115ea4e4~mv2.png/v1/fill/w_600,h_600,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/05.png"
+            alt="mouseGamer"
+            width="370"
+          />
+          <h3>Mouse Gamer</h3>
+        </div>
 
-      <div>
-        <img
-          src="https://static.wixstatic.com/media/71a6c2_ec0eaed85fd547e18e0afae51867dee1~mv2.png/v1/fill/w_624,h_404,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/K582-IF-3%20%2B%2B%C2%A6%C2%A6_jpg.png"
-          alt="tecladoGamer"
-          width="370"
-          height="370"
-        />
-        <h3>Teclado Gamer</h3>
-      </div>
-      <div>
-        <img
-          src="https://static.wixstatic.com/media/71a6c2_77e6653e9cd747dea8f00136115ea4e4~mv2.png/v1/fill/w_600,h_600,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/05.png"
-          alt="mouseGamer"
-          width="370"
-        />
-        <h3>Mouse Gamer</h3>
-      </div>
+        <div>
+          <img
+            src="https://static.wixstatic.com/media/71a6c2_02da6ead00fc476ebef5e70fc41cee0c~mv2.png/v1/fill/w_821,h_548,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/01.png"
+            alt="gabinetGamer"
+            height="370"
+          />
+          <h3>Gabinet Gamer</h3>
+        </div>
 
-      <div>
-        <img
-          src="https://static.wixstatic.com/media/71a6c2_02da6ead00fc476ebef5e70fc41cee0c~mv2.png/v1/fill/w_821,h_548,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/01.png"
-          alt="gabinetGamer"
-          height="370"
-        />
-        <h3>Gabinet Gamer</h3>
-      </div>
+        <div>
+          <img
+            src="https://static.wixstatic.com/media/71a6c2_367201e3ad5f40f69e60594043d10414~mv2.png/v1/fill/w_574,h_574,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/01.png"
+            alt="cadeiraGamer"
+            width="370"
+          />
+          <h3>Cadeira Gamer</h3>
+        </div>
 
-      <div>
-        <img
-          src="https://static.wixstatic.com/media/71a6c2_367201e3ad5f40f69e60594043d10414~mv2.png/v1/fill/w_574,h_574,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/01.png"
-          alt="cadeiraGamer"
-          width="370"
-        />
-        <h3>Cadeira Gamer</h3>
-      </div>
+        <div>
+          <img
+            src="https://static.wixstatic.com/media/71a6c2_ec0eaed85fd547e18e0afae51867dee1~mv2.png/v1/fill/w_624,h_404,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/K582-IF-3%20%2B%2B%C2%A6%C2%A6_jpg.png"
+            alt="tecladoGamer"
+            width="370"
+            height="370"
+          />
+          <h3>Teclado Gamer</h3>
+        </div>
+        <div>
+          <img
+            src="https://static.wixstatic.com/media/71a6c2_77e6653e9cd747dea8f00136115ea4e4~mv2.png/v1/fill/w_600,h_600,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/05.png"
+            alt="mouseGamer"
+            width="370"
+          />
+          <h3>Mouse Gamer</h3>
+        </div>
 
-      <div>
-        <img
-          src="https://static.wixstatic.com/media/71a6c2_ec0eaed85fd547e18e0afae51867dee1~mv2.png/v1/fill/w_624,h_404,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/K582-IF-3%20%2B%2B%C2%A6%C2%A6_jpg.png"
-          alt="tecladoGamer"
-          width="370"
-          height="370"
-        />
-        <h3>Teclado Gamer</h3>
-      </div>
-      <div>
-        <img
-          src="https://static.wixstatic.com/media/71a6c2_77e6653e9cd747dea8f00136115ea4e4~mv2.png/v1/fill/w_600,h_600,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/05.png"
-          alt="mouseGamer"
-          width="370"
-        />
-        <h3>Mouse Gamer</h3>
-      </div>
-
-      <div>
-        <img
-          src="https://static.wixstatic.com/media/71a6c2_02da6ead00fc476ebef5e70fc41cee0c~mv2.png/v1/fill/w_821,h_548,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/01.png"
-          alt="gabinetGamer"
-          height="370"
-        />
-        <h3>Gabinet Gamer</h3>
-      </div>
-    </section>
+        <div>
+          <img
+            src="https://static.wixstatic.com/media/71a6c2_02da6ead00fc476ebef5e70fc41cee0c~mv2.png/v1/fill/w_821,h_548,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/01.png"
+            alt="gabinetGamer"
+            height="370"
+          />
+          <h3>Gabinet Gamer</h3>
+        </div>
+      </section>
+    </main>
 
     <footer>
       <ul class="footer">
